Avoid zooming in on safari when clicking the input | Fit mobile size

--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,11 @@ code {
 @media (max-width: 576px) {
   body {
     margin: 0;
+    justify-content: flex-start;
+    height: 90vh;
+  }
+  .App {
+    border-radius: 0;
   }
 }
 
