--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,9 +6,11 @@
   background: #212121;
   border-radius: 2rem 2rem 0 0;
   text-transform: capitalize;
+}
 
-  /* Small devices (landscape phones, 576px and up) */
-  @media (max-width: 576px) {
+/* Small devices (landscape phones, 576px and up) */
+@media (max-width: 576px) {
+  .header {
     border-radius: 0;
   }
 }
